--- a/dia_10/styles.css
+++ b/dia_10/styles.css
@@ -1,3 +1,8 @@
+:root {
+    --color-bone: rgb(255, 229, 195);
+    --color-red: rgb(199, 34, 34);
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -18,6 +23,8 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    width: max-content;
+    margin: auto;
     gap: 1rem;
     
     & .screen-frame {
@@ -36,40 +43,72 @@ body {
         }
     }
     
-    & .controls {
+    & .control-box {
         display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-evenly;
-        background-color: gray;
-        border-radius: 28px;
-        padding: .4rem .8rem;
-        margin: auto;
-        width: clamp(200px, 200px, 35%);
-        gap: .5rem;
-    
-        & .controls-power {
-            background-color: red;
-            height: 32px;
-            width: 32px;
-            border-radius: 50%;
-            cursor: pointer;
-            pointer-events: all;
-        }
+        justify-content: flex-start;
+        width: 100%;
+        height: 48px;
+        gap: 1rem;
 
-        & .controls-next {
-            background-color: aquamarine;
-            height: 32px;
-            width: 32px;
-            cursor: pointer;
-            pointer-events: all;
-        }
+        & .controls {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-evenly;
+            width: clamp(200px, 200px, 35%);
+            height: 100%;
+            background-color: gray;
+            border-radius: 28px;
+            padding: .4rem .8rem;
+            gap: .5rem;
         
-        & .controls-prev {
-            background-color: aquamarine;
-            height: 32px;
-            width: 32px;
-            cursor: pointer;
-            pointer-events: all;
+            & .controls-power {
+                background-color: var(--color-red);
+                height: 32px;
+                width: 32px;
+                border-radius: 50%;
+                cursor: pointer;
+                pointer-events: all;
+            }
         }
+    }
+
+    & .speaker-box {
+        width: 100%;
+        height: 100%;
+
+        & .speaker-frame {
+            display: flex;
+            height: 48px;
+            width: 100%;
+            border-radius: 10px;
+            background-color: black;
+        }
+    }
+}
+
+.icon {
+    width: 16px;
+    height: 16px;
+}
+
+.button-square {
+    border-radius: 8px;
+    background-color: var(--color-bone);
+    align-content: center;
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+    pointer-events: all;
+
+    & .right-arrow {
+        margin: auto;
+        background-color: black;
+        clip-path: polygon(0 0, 100% 50%, 0 100%);
+    }
+
+    & .left-arrow {
+        margin: auto;
+        background-color: black;
+        clip-path: polygon(100% 100%, 100% 0, 0 50%);
     }
 }
