--- a/dia_10/styles.css
+++ b/dia_10/styles.css
@@ -54,6 +54,7 @@ body {
             display: flex;
             flex-wrap: nowrap;
             justify-content: space-evenly;
+            align-items: center;
             width: clamp(200px, 200px, 35%);
             height: 100%;
             background-color: gray;
@@ -69,19 +70,6 @@ body {
                 cursor: pointer;
                 pointer-events: all;
             }
-        }
-    }
-
-    & .speaker-box {
-        width: 100%;
-        height: 100%;
-
-        & .speaker-frame {
-            display: flex;
-            height: 48px;
-            width: 100%;
-            border-radius: 10px;
-            background-color: black;
         }
     }
 }
