--- a/src/layouts/MainFrame.astro
+++ b/src/layouts/MainFrame.astro
@@ -6,7 +6,7 @@ import '../styles/Global.css'
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Día 1</title>
+    <title>Manz.Dev Challenges</title>
 </head>
 <body>
     <div class="main-frame">
