--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -4,7 +4,7 @@
     --color-text: #26667F;
     --color-primary: #DDF4E7;
     --padding-def: .8rem;
-    --padding-project: 1rem;
+    --padding-project: 1.4rem;
 }
 
 * {
@@ -19,6 +19,20 @@ body {
     background-color: var(--color-background);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: black;
+}
+
+ul {
+    margin-left: 3rem;
+}
+
+li {
+    margin-bottom: .4rem;
+}
+
+h2 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .main-frame {
