--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -1,33 +1,49 @@
+.project-description {
+    height: max-content;
+    margin-bottom: 1rem;
+}
+
 .project-card {
     display: flex;
     flex-direction: column;
     width: clamp(340px, 100%, 75%);
-    filter: drop-shadow(-6px 6px 0 black);
     
     & .project-title {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        gap: 1rem;
+        height: max-content;
         position: relative;
-        top: 1px;
+        top: 3px;
         padding: var(--padding-def);
-        width: clamp(300px, 90%, 65%);
+        width: 100%;
         justify-content: space-between;
+        border: 3px solid black;
         border-radius: 12px 12px 0 0;
-        background-color: var(--color-sub-background);
+        background-color: var(--color-text);
+    
+        & h2 {
+            font-size: 18px;
+        }
     }
     
     & .project-content {
-        max-height: 100px;
+        max-height: 64px;
         overflow: hidden;
         padding: var(--padding-project);
-        border-radius: 0 12px 12px 12px;
+        border-radius: 0 0 12px 12px;
+        border: 3px solid black;
         background-color: var(--color-sub-background);
-        transition: max-height .5s ease;
+        transition: max-height 0.5s ease;
+
+        & .project-frame {
+            border-radius: 8px;
+            padding: 2rem;
+            background-color: white;
+        }
     }
-    
+
     & .project-content:hover {
-        max-height: 1800px;
+        max-height: 2000px;
     }
 }
