Agregada la pagina principal, ejercicios y archivos faltantes de ejercicio 2 y 3

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,43 +1,19 @@
 ---
-import MainFrame from "../layouts/mainframe.astro";
 import ProjectCard from "../components/ProjectCard.astro";
-import DiaUno from "../dailytasks/DiaUno/DiaUno.astro";
-import DiaDos from "../dailytasks/DiaDos/DiaDos.astro";
+import MainFrame from "../layouts/MainFrame.astro";
+import DiaUno from "../dailytasks/1/DiaUno.astro";
+import DiaDos from "../dailytasks/2/DiaDos.astro";
+import DiaTres from "../dailytasks/3/DiaTres.astro";
 ---
 
 <MainFrame>
-    <ProjectCard title="Dia 1 - Importación de estilos externos">
+    <ProjectCard title="Día 1 - Importación de estilos" description="Pone en practica los métodos para importar estilos externos.">
         <DiaUno></DiaUno>
     </ProjectCard>
-    <ProjectCard title="Dia 2 - Titulo, Parrafos e Imagenes">
+    <ProjectCard title="Día 2 - Titulos, parrafos e imagenes" description="Practica con las etiquetas semanticas para insertar imagenes, parrafos y titulos.">
         <DiaDos></DiaDos>
     </ProjectCard>
-    <ProjectCard title="Dia 3 - Enlaces">
-    </ProjectCard>
-    <ProjectCard title="Día 4 - Verificadores de código HTML">
-    </ProjectCard>
-    <ProjectCard title="Día 5 - Etiquetas META y SEO">
-    </ProjectCard>
-    <ProjectCard title="Día 6 - Acordeon con: Details, Summary y Section">
-    </ProjectCard>
-    <ProjectCard title="Día 7 - JPEG-XL, AVIF y JPG integración de formatos">
-    </ProjectCard>
-    <ProjectCard title="Día 8 - Etiqueta Strong, agregar enfasis al texto">
-    </ProjectCard>
-    <ProjectCard title="Día 9 - Pergamino: Estilos de listas">
-    </ProjectCard>
-    <ProjectCard title="Día 10 - Interactividad: Modificando el DOM">
-    </ProjectCard>
-    <ProjectCard title="Día 11 - Indices y Subindices">
-    </ProjectCard>
-    <ProjectCard title="Día 12 - Interactividad con sliders">
-    </ProjectCard>
-    <ProjectCard title="Día 13 - Simulador: Venta de tickets y etiqueta Progress">
-    </ProjectCard>
-    <ProjectCard title="">
-    </ProjectCard>
-    <ProjectCard title="">
-    </ProjectCard>
-    <ProjectCard title="">
+    <ProjectCard title="Día 3 - Enlaces intrnos y externos" description="Implementación de enlaces internos y externos.`">
+        <DiaTres></DiaTres>
     </ProjectCard>
 </MainFrame>
