--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,9 @@ import MainFrame from "../layouts/MainFrame.astro";
 import DiaUno from "../dailytasks/1/DiaUno.astro";
 import DiaDos from "../dailytasks/2/DiaDos.astro";
 import DiaTres from "../dailytasks/3/DiaTres.astro";
+import DiaSeis from "../dailytasks/6/DiaSeis.astro";
+import DiaOcho from "../dailytasks/8/DiaOcho.astro";
+import DiaNueve from "../dailytasks/9/DiaNueve.astro";
 ---
 
 <MainFrame>
@@ -15,5 +18,14 @@ import DiaTres from "../dailytasks/3/DiaTres.astro";
     </ProjectCard>
     <ProjectCard title="Día 3 - Enlaces intrnos y externos" description="Implementación de enlaces internos y externos.`">
         <DiaTres></DiaTres>
+    </ProjectCard>
+    <ProjectCard title="Día 6 - Uso de details, summary y section" description="Se crea un acordeon utilizando estas etiquetas para hacer secciones colapsables.">
+        <DiaSeis></DiaSeis>
+    </ProjectCard>
+    <ProjectCard title="Día 8 - Elemento Strong" description="Crear enfasis en el texto estilizando con CSS.">
+        <DiaOcho></DiaOcho>
+    </ProjectCard>
+    <ProjectCard title="Día 9 - Listas y estilos de listas" description="Elaborar un pergamino con una lista en numeros romanos.">
+        <DiaNueve></DiaNueve>
     </ProjectCard>
 </MainFrame>
