Agregados los ejercicios 4 y 5 a la pagina principal

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import MainFrame from "../layouts/MainFrame.astro";
 import DiaUno from "../dailytasks/1/DiaUno.astro";
 import DiaDos from "../dailytasks/2/DiaDos.astro";
 import DiaTres from "../dailytasks/3/DiaTres.astro";
+import DiaCuatro from "../dailytasks/4/DiaCuatro.astro";
+import DiaCinco from "../dailytasks/5/DiaCinco.astro";
 import DiaSeis from "../dailytasks/6/DiaSeis.astro";
 import DiaOcho from "../dailytasks/8/DiaOcho.astro";
 import DiaNueve from "../dailytasks/9/DiaNueve.astro";
@@ -18,6 +20,12 @@ import DiaNueve from "../dailytasks/9/DiaNueve.astro";
     </ProjectCard>
     <ProjectCard title="Día 3 - Enlaces intrnos y externos" description="Implementación de enlaces internos y externos.`">
         <DiaTres></DiaTres>
+    </ProjectCard>
+    <ProjectCard title="Día 4 - Validación de código HTML" description="Se utilizan páginas que analizan el código HTML en busca de errores de sintaxis o semántica.">
+        <DiaCuatro></DiaCuatro>
+    </ProjectCard>
+    <ProjectCard title="Día 5 - Etiquetas meta y SEO" description="Agrega etiquetas meta en el head para mejorar el SEO y la legibilidad para los motores, navegadores y bots.">
+        <DiaCinco></DiaCinco>
     </ProjectCard>
     <ProjectCard title="Día 6 - Uso de details, summary y section" description="Se crea un acordeon utilizando estas etiquetas para hacer secciones colapsables.">
         <DiaSeis></DiaSeis>
